<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F5F5F5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/task_list_title"
        android:textColor="#333333"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_1_title"
        android:textSize="18sp"
        android:padding="16dp"
        android:background="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:elevation="2dp"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/task_2_title"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/task_3_title"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/task_4_title"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/task_5_title"
        android:textSize="18sp" />

</LinearLayout>